<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.streamnative</groupId>
    <artifactId>pulsar-jms-cts</artifactId>
    <version>0.0.1</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <junit.version>4.13.2</junit.version>
        <commons-cli.version>1.5.0</commons-cli.version>
        <commons-collections.version>3.2.2</commons-collections.version>
        <commons-logging.version>1.2</commons-logging.version>
        <oswego-concurrent.version>1.3.4-jboss-update1</oswego-concurrent.version>
        <exolabcore.version>0.3.7</exolabcore.version>
        <slf4j.version>2.0.3</slf4j.version>
        <logback.version>1.3.8</logback.version>
        <oro.version>2.0.8</oro.version>
        <xdoclet.xdoclet.version>1.2.3</xdoclet.xdoclet.version>
        <xdoclet.xjavadoc.version>1.2.3</xdoclet.xjavadoc.version>
        <castor.version>0.9.4.3</castor.version>
        <xalan.version>2.7.2</xalan.version>
        <xerces-impl.version>2.9.0</xerces-impl.version>
        <pulsar-jms.version>4.0.2-SNAPSHOT</pulsar-jms.version>

        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>javax.jms</groupId>
            <artifactId>javax.jms-api</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!--
        <dependency>
            <groupId>jmscts</groupId>
            <artifactId>jmscts</artifactId>
            <version>0.5-b2</version>
            <exclusions>
                <exclusion>
                    <groupId>jms</groupId>
                    <artifactId>jms</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        -->

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>${commons-cli.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>${commons-collections.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>${commons-logging.version}</version>
        </dependency>

        <dependency>
            <groupId>oswego-concurrent</groupId>
            <artifactId>concurrent</artifactId>
            <version>${oswego-concurrent.version}</version>
        </dependency>

        <dependency>
            <groupId>exolabcore</groupId>
            <artifactId>exolabcore</artifactId>
            <version>${exolabcore.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>oro</groupId>
            <artifactId>oro</artifactId>
            <version>${oro.version}</version>
        </dependency>

        <dependency>
            <groupId>xdoclet</groupId>
            <artifactId>xdoclet</artifactId>
            <version>${xdoclet.xdoclet.version}</version>
        </dependency>

        <dependency>
            <groupId>xdoclet</groupId>
            <artifactId>xjavadoc</artifactId>
            <version>${xdoclet.xjavadoc.version}</version>
        </dependency>

        <dependency>
            <groupId>castor</groupId>
            <artifactId>castor</artifactId>
            <version>${castor.version}</version>
        </dependency>

        <dependency>
            <groupId>xalan</groupId>
            <artifactId>xalan</artifactId>
            <version>${xalan.version}</version>
        </dependency>

        <dependency>
            <groupId>org.bluestemsoftware.open.maven.tparty</groupId>
            <artifactId>xerces-impl</artifactId>
            <version>${xerces-impl.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>

        <dependency>
            <!-- Apache Pulsar JMS Client -->
            <groupId>com.datastax.oss</groupId>
            <artifactId>pulsar-jms</artifactId>
            <version>${pulsar-jms.version}</version>
        </dependency>

    </dependencies>

    <build>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>

                <configuration>
                    <encoding>UTF-8</encoding>
                    <argLine>-Xms1024m -Xmx4096m</argLine>
                </configuration>

                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>verify</id>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>

            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

    <repositories>
        <repository>
            <id>jboss.org</id>
            <name>Jboss Maven 2 Repository</name>
            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
        </repository>
        <repository>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>sonatype</id>
            <name>Sonatype Maven 2 Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

</project>